tests/function/compile_fail/missing_check.rs
use pre::pre;

#[pre(condition("must be bar"))]
fn foo() {}

fn main() {
    foo()
}
